add_subdirectory(common)
add_subdirectory(engine)
add_subdirectory(engine/blackomega)
add_subdirectory(engine/blueomega)
add_subdirectory(engine/cyanomega)
add_subdirectory(engine/greenomega)
add_subdirectory(engine/redomega)
add_subdirectory(engine/silveromega)
add_subdirectory(engine/violetomega)
add_subdirectory(engine/toneomega)
add_subdirectory(engine/wavpackomega)
add_subdirectory(engine/whiteomega)
add_subdirectory(network)
add_subdirectory(network/http)
add_subdirectory(network/ftp)
add_subdirectory(network/mime)
add_subdirectory(network/rtp)
add_subdirectory(network/rtp/silveromega)
add_subdirectory(audioio)
add_subdirectory(dlna)
add_subdirectory(remote)
add_subdirectory(track/info)
add_subdirectory(track/db)
add_subdirectory(track/model)
add_subdirectory(widget)
add_subdirectory(player)
add_subdirectory(player/oplayer)
add_subdirectory(daemon)
add_subdirectory(daemon/phoenix)
if (NOT ${TIGER_RASPBIAN_BUILD})
	add_subdirectory(test)
	add_subdirectory(test/integration)
endif (NOT ${TIGER_RASPBIAN_BUILD})
