add_subdirectory(common)
add_subdirectory(engine)
add_subdirectory(engine/blackomega)
add_subdirectory(engine/blueomega)
add_subdirectory(engine/cyanomega)
add_subdirectory(engine/greenomega)
add_subdirectory(engine/redomega)
add_subdirectory(engine/silveromega)
add_subdirectory(engine/violetomega)
add_subdirectory(engine/toneomega)
add_subdirectory(engine/wavpackomega)
add_subdirectory(engine/whiteomega)
add_subdirectory(network)
add_subdirectory(network/http)
add_subdirectory(network/ftp)
add_subdirectory(network/mime)
add_subdirectory(network/rtp)
add_subdirectory(network/rtp/silveromega)
add_subdirectory(audioio)
add_subdirectory(dlna)
add_subdirectory(remote)
add_subdirectory(track/info)
add_subdirectory(widget)
add_subdirectory(track/db)
add_subdirectory(track/model)
add_subdirectory(player)
add_subdirectory(player/oplayer)
add_subdirectory(test)
add_subdirectory(test/integration)
add_subdirectory(playerapp/playercommon)
add_subdirectory(playerapp/playercommon/test)
add_subdirectory(playerapp/audiodaemon)
add_subdirectory(playerapp/playlistmanager)
add_subdirectory(playerapp/playerapp)
add_subdirectory(playerapp/webservice)
